fix: adjust nav-Menu spacing

--- a/css/index.css
+++ b/css/index.css
@@ -180,7 +180,7 @@ html {
 }
 
 .u-hero__nav-header{
-  padding: 20%;
+  padding: 20% 0 20% 0;
 }
 
 .p-hero__nav-list{
